// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animationTimingFunction renders 0 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: 0;
  animation-timing-function: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: 0;
  animation-timing-function: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: 0;
  animation-timing-function: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: 0;
  animation-timing-function: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders function 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: hasnot;
  animation-timing-function: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: has;
  animation-timing-function: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: hasnot;
  animation-timing-function: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: has;
  animation-timing-function: has;
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: invalid.path.1;
  animation-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: invalid.path.1;
  animation-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: invalid.path.1;
  animation-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: invalid.path.1;
  animation-timing-function: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders negative number 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: -54881;
  animation-timing-function: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: -54881;
  animation-timing-function: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: -42365;
  animation-timing-function: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: -42365;
  animation-timing-function: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: July;
  animation-timing-function: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: July;
  animation-timing-function: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: January;
  animation-timing-function: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: December;
    animation-timing-function: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: June;
    animation-timing-function: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: January;
  animation-timing-function: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: December;
    animation-timing-function: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: June;
    animation-timing-function: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: July;
    animation-timing-function: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: July;
    animation-timing-function: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: June;
    animation-timing-function: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: June;
    animation-timing-function: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: July;
  animation-timing-function: July;
}

@media May {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: July;
  animation-timing-function: July;
}

@media May {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: April;
  animation-timing-function: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: January;
    animation-timing-function: January;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: December;
    animation-timing-function: December;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: April;
  animation-timing-function: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: January;
    animation-timing-function: January;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: December;
    animation-timing-function: December;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-animation-timing-function: July;
    animation-timing-function: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-animation-timing-function: July;
    animation-timing-function: July;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: September;
    animation-timing-function: September;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: November;
    animation-timing-function: November;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: August;
    animation-timing-function: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-timing-function: January;
    animation-timing-function: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: December;
    animation-timing-function: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: June;
    animation-timing-function: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-animation-timing-function: January;
    animation-timing-function: January;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: December;
    animation-timing-function: December;
  }
}

@media January {
  .c0 {
    -webkit-animation-timing-function: April;
    animation-timing-function: April;
  }
}

@media April {
  .c0 {
    -webkit-animation-timing-function: May;
    animation-timing-function: May;
  }
}

@media June {
  .c0 {
    -webkit-animation-timing-function: June;
    animation-timing-function: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: 54881;
  animation-timing-function: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: 54881;
  animation-timing-function: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: 42365;
  animation-timing-function: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: 42365;
  animation-timing-function: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders string 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: July;
  animation-timing-function: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: July;
  animation-timing-function: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: June;
  animation-timing-function: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: June;
  animation-timing-function: June;
}

<div
    className="c0"
  />,
]
`;

exports[`animationTimingFunction renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`animationTimingFunction renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-animation-timing-function: DarkSlateBlue;
  animation-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: DarkSlateBlue;
  animation-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: DarkSlateBlue;
  animation-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-animation-timing-function: DarkSlateBlue;
  animation-timing-function: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
